Follow the SUIT CSS naming conventions

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,10 +2,10 @@
 title: Made by Form
 ---
 
-<div class="container">
-  <div class="content">
-    <!--[if lte IE 8]><%= image_tag "logo.png", alt: "Made by Form", class: "logo" %><![endif]-->
-    <!--[if gt IE 8]><!--><%= image_tag "logo.svg", alt: "Made by Form", class: "logo", draggable: "false" %><!--<![endif]-->
+<div class="Homepage">
+  <div class="Homepage-content">
+    <!--[if lte IE 8]><%= image_tag "logo.png", alt: "Made by Form", class: "Homepage-logo" %><![endif]-->
+    <!--[if gt IE 8]><!--><%= image_tag "logo.svg", alt: "Made by Form", class: "Homepage-logo", draggable: "false" %><!--<![endif]-->
     <p>
       We're a consultancy working in the intersection of code and design.
       Our expertise lies in web application and iOS development, user experience design and research.
