--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -15,28 +15,7 @@ body.index {
   text-align: center;
 }
 
-p {
-  line-height: 1.5em;
-}
-
-a {
-  border-bottom: 2px solid rgba(255,255,255,.2);
-  color: inherit;
-  text-decoration: none;
-
-  &:hover {
-    border-color: currentColor;
-  }
-}
-
-.logo {
-  margin-bottom: 20px;
-  width: 80%;
-  max-width: 350px;
-  max-height: 126px;
-}
-
-.container {
+.Homepage {
   height: 100%;
   margin: 0 auto;
   padding: 0;
@@ -48,12 +27,33 @@ a {
   @include box-orient(horizontal);
   @include box-pack(center);
   @include box-align(center);
+
+  p {
+    line-height: 1.5em;
+  }
+
+  a {
+    border-bottom: 2px solid rgba(255,255,255,.2);
+    color: inherit;
+    text-decoration: none;
+
+    &:hover {
+      border-color: inherit;
+    }
+  }
 }
 
-.container, .content {
+.Homepage, .Homepage-content {
   max-width: 640px;
 }
 
-.content {
+.Homepage-content {
   padding: 50px 30px;
+}
+
+.Homepage-logo {
+  margin-bottom: 20px;
+  width: 80%;
+  max-width: 350px;
+  max-height: 126px;
 }
