Add links to Twitter and GitHub

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -10,8 +10,10 @@ title: Made by Form
       We're a consultancy working in the intersection of code and design.
       Our expertise lies in web application and iOS development, user experience design and research.
     </p>
-    <p>
-      Reach us at <a href="mailto:hello@madebyform.com">hello@madebyform.com</a> to find out more.
-    </p>
+    <ul class="Homepage-links">
+      <li><a href="mailto:hello@madebyform.com">Email</a></li>
+      <li><a href="https://twitter.com/madebyform">@madebyform</a></li>
+      <li><a href="https://github.com/madebyform">GitHub</a></li>
+    </ul>
   </div>
 </div>
