--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -57,3 +57,22 @@ body.index {
   max-width: 350px;
   max-height: 126px;
 }
+
+.Homepage-links {
+  padding: 0;
+
+  li {
+    list-style-type: none;
+    padding-bottom: 10px;
+
+    @media screen and (min-width: 375px) {
+      display: inline;
+      padding: 0 6px;
+
+      &:not(:first-child):before {
+        content: "·";
+        padding-right: 14px;
+      }
+    }
+  }
+}
