--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html class="<%= page_classes %>">
   <head>
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta charset="utf-8">
@@ -14,7 +14,7 @@
     <%= stylesheet_link_tag :site %>
   </head>
 
-  <body class="<%= page_classes %>">
+  <body>
     <%= yield %>
 
     <%= javascript_include_tag :all %>
