--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -6,7 +6,7 @@
     <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
 
     <!-- Use title if it's in the page YAML frontmatter -->
-    <title><%= current_page.data.title || "Made by Form" %></title>
+    <title><%= "#{ current_page.data.title } / " if current_page.data.title %>Made by Form</title>
 
     <meta name="description" content="A consultancy working in the intersection of code and design." />
     <meta name="google-site-verification" content="kpCM-3HHl9GGgd3zKrC3Yl67AZVsY-i65KeszKEZgr0" />
