--- a/source/layouts/blog.erb
+++ b/source/layouts/blog.erb
@@ -1,12 +1,12 @@
 <% wrap_layout :layout do %>
-  <div class="Blog">
-    <h1>
-      <%= current_article.title %>
-      <small><%= current_article.date.strftime('%b %e, %Y') %></small>
-    </h1>
+  <article class="Blog-post">
+    <small class="Blog-date">
+      <%= current_article.date.strftime('%b %e, %Y') %>
+    </small>
+    <h1><%= current_article.title %></h1>
 
     <%= yield %>
 
-    <%= link_to "Archive", "/blog" %>
-  </div>
+    <%= link_to "Archive", "/blog", class: "Blog-archiveLink" %>
+  </article>
 <% end %>
