--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -10,7 +10,7 @@
 
     <meta name="description" content="A consultancy working in the intersection of code and design." />
     <meta name="google-site-verification" content="kpCM-3HHl9GGgd3zKrC3Yl67AZVsY-i65KeszKEZgr0" />
-    <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet" type="text/css">
+    <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700|Source+Code+Pro:400,600" rel="stylesheet" type="text/css">
     <%= stylesheet_link_tag :site %>
   </head>
 
