--- a/source/blog/index.html.erb
+++ b/source/blog/index.html.erb
@@ -3,11 +3,26 @@ pageable: false
 ---
 
 <div class="Blog">
-  <nav class="Blog-archive">
-    <ul>
-      <% page_articles.each_with_index do |article, i| %>
-        <li><%= link_to article.title, article %> <span><%= article.date.strftime('%b %e') %></span></li>
-      <% end %>
-    </ul>
-  </nav>
+  <div class="Blog-header">
+    <% link_to "/" do %>
+      <%= image_tag "logo-square.svg", alt: "Made by Form", class: "Blog-logo", draggable: "false" %>
+    <% end %>
+  </div>
+
+  <div class="Blog-archive">
+    <h2>Blog Posts</h2>
+
+    <nav>
+      <ul>
+        <% page_articles.each_with_index do |article, i| %>
+          <li>
+            <span class="Blog-archive-date">
+              <%= article.date.strftime('%b %e, %Y') %>
+            </span>
+            <%= link_to article.title, article %>
+          </li>
+        <% end %>
+      </ul>
+    </nav>
+  </div>
 </div>
