--- a/source/stylesheets/blog.css.scss
+++ b/source/stylesheets/blog.css.scss
@@ -1,22 +1,29 @@
-// Common variables to define font weights
-$font-weight-normal: 400;
-$font-weight-semibold: 600;
-$font-weight-bold: 700;
+html.blog_index body {
+  // This page as dark background and light text
+  background: #1d143e image-url("background.svg");
 
-// Common variables to define font families
-$font-family-sans-serif: Source Sans Pro, sans-serif;
-$font-family-monospace: Source Code Pro, monospace;
+  h2 {
+    color: $primary-invert-color;
+  }
+  a {
+    color: $primary-invert-color;
+    border-bottom: 2px solid rgba(255,255,255,.2);
+  }
+  .Blog-archive-date {
+    color: $primary-invert-color;
+  }
+}
 
 /*
  * Styles for the typography of a blog post.
  * Based on Ródão, a minimalist theme for Ghost (github.com/dmfrancisco/rodao).
  */
-.Blog-post {
+.Blog {
   font-size: 16px;
   line-height: 22px;
   margin: 0 auto;
   max-width: 680px;
-  padding: 15px;
+  padding: 30px 15px;
 
   // Larger tipography for bigger screens
   @media screen and (min-width: 414px) {
@@ -31,16 +38,13 @@ $font-family-monospace: Source Code Pro, monospace;
     padding-top: 80px;
   }
 
-  /* Remove the margin of the first and last elements */
-  & > *:first-child {
-    margin-top: 0 !important;
-  }
-  & > *:last-child {
-    margin-bottom: 0 !important;
-  }
-  p:empty {
-    // Hide empty paragraphs to prevent unnecessary margins
-    display: none;
+  a {
+    color: inherit;
+    text-decoration: none;
+
+    &:hover {
+      border-color: currentColor;
+    }
   }
 
   // Base styles
@@ -85,7 +89,7 @@ $font-family-monospace: Source Code Pro, monospace;
   }
 
   a {
-    border-bottom: 1px solid;
+    border-bottom: 2px solid rgba(0,0,0,.2);
     color: inherit;
     text-decoration: none;
     word-wrap: break-word;
@@ -160,9 +164,52 @@ $font-family-monospace: Source Code Pro, monospace;
   }
 }
 
-.Blog-date {
+.Blog-post {
+  /* Remove the margin of the first and last elements */
+  & > *:first-child {
+    margin-top: 0 !important;
+  }
+  & > *:last-child {
+    margin-bottom: 0 !important;
+  }
+  p:empty {
+    // Hide empty paragraphs to prevent unnecessary margins
+    display: none;
+  }
+}
+
+.Blog-header {
+  text-align: center;
+
+  a {
+    border-bottom: none !important; // Remove border from image link
+  }
+}
+
+.Blog-archive {
+  ul {
+    padding: 0;
+  }
+
+  li {
+    list-style-type: none;
+  }
+}
+
+.Blog-archive-date, .Blog-post-date {
   font-family: $font-family-sans-serif;
   text-transform: uppercase;
   letter-spacing: 1px;
-  opacity: 0.4;
+  opacity: 0.2;
+  color: inherit;
+}
+
+.Blog-archive-date {
+  padding-right: 20px;
+}
+
+.Blog-logo {
+  width: 110px;
+  height: 127px;
+  margin-bottom: 40px;
 }
