Fix paths to blog

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,7 +7,7 @@
       Our expertise lies in web application and iOS development, user experience design and research.
     </p>
     <ul class="Homepage-links">
-      <li><%= link_to "Blog", "/blog" %></li>
+      <li><%= link_to "Blog", "blog" %></li>
       <li><%= link_to "@madebyform", "https://twitter.com/madebyform" %></li>
       <li><%= link_to "GitHub", "https://github.com/madebyform" %></li>
       <li><%= link_to "Email", "mailto:hello@madebyform.com" %></li>
