--- a/source/layouts/blog.erb
+++ b/source/layouts/blog.erb
@@ -8,7 +8,7 @@
 
       <%= yield %>
 
-      <%= link_to "Archive", "/blog", class: "Blog-archiveLink" %>
+      <%= link_to "Archive", "blog", class: "Blog-archiveLink" %>
     </article>
   <div>
 <% end %>
