Improve the link to home

--- a/source/blog/index.html.erb
+++ b/source/blog/index.html.erb
@@ -4,7 +4,7 @@ pageable: false
 
 <div class="Blog">
   <div class="Blog-header">
-    <% link_to "/" do %>
+    <% link_to "/", class: "u-noBorder" do %>
       <%= image_tag "logo-square.svg", alt: "Made by Form", class: "Blog-logo", draggable: "false" %>
     <% end %>
   </div>
