--- a/source/stylesheets/_variables.css.scss
+++ b/source/stylesheets/_variables.css.scss
@@ -10,4 +10,4 @@ $font-family-monospace: Source Code Pro, monospace;
 // Others
 $primary-color: #1d143e;
 $primary-invert-color: #fdfdfd;
-$grey: gainsboro;
+$grey: #efefef;
