--- a/source/layouts/blog.erb
+++ b/source/layouts/blog.erb
@@ -1,14 +1,19 @@
 <% wrap_layout :layout do %>
   <div class="Blog">
     <article class="Blog-post">
+      <div class="Blog-post-header">
+        <% link_to "..", class: "u-noBorder" do %>
+          <%= image_tag "logo-square.svg", alt: "Made by Form", class: "Blog-logo", draggable: "false" %>
+        <% end %>
+      </div>
+
       <small class="Blog-post-date">
         <%= current_article.date.strftime('%b %e, %Y') %>
       </small>
+
       <h1><%= current_article.title %></h1>
 
       <%= yield %>
-
-      <%= link_to "Archive", "..", class: "Blog-archiveLink" %>
     </article>
   <div>
 <% end %>
