Minor refactoring done to the CSS

--- a/source/blog/index.html.erb
+++ b/source/blog/index.html.erb
@@ -1,6 +1,4 @@
----
-pageable: false
----
+<% @body_classes = "body--dark body--withBackground" %>
 
 <div class="Blog">
   <div class="Blog-header">
