--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,3 +1,5 @@
+<% @body_classes = "body--dark" %>
+
 <div class="Homepage">
   <div class="Homepage-content">
     <!--[if lte IE 8]><%= image_tag "logo.png", alt: "Made by Form", class: "Homepage-logo" %><![endif]-->
