--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="<%= page_classes %>">
+<html>
   <head>
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta charset="utf-8">
@@ -15,7 +15,7 @@
     <%= stylesheet_link_tag :site %>
   </head>
 
-  <body>
+  <body class="<%= @body_classes %>">
     <%= yield %>
 
     <%= javascript_include_tag :all %>
