--- a/source/stylesheets/_blog.css.scss
+++ b/source/stylesheets/_blog.css.scss
@@ -1,37 +1,15 @@
-html.blog body {
-  background-color: $primary-invert-color;
-  color: $primary-color;
-}
-
-html.blog_index body {
-  // This page as dark background and light text
-  background: #1d143e image-url("background.svg");
-
-  h2 {
-    color: $primary-invert-color;
-  }
-  a {
-    color: $primary-invert-color;
-    border-bottom: 2px solid rgba(255,255,255,.2);
-  }
-  .Blog-archive-date {
-    color: $primary-invert-color;
-  }
-}
-
 /*
  * Styles for the typography of a blog post.
  * Based on Ródão, a minimalist theme for Ghost (github.com/dmfrancisco/rodao).
  */
 .Blog {
-  font-family: $font-family-sans-serif;
   font-size: 16px;
   line-height: 22px;
   margin: 0 auto;
   max-width: 680px;
   padding: 30px 15px;
 
-  // Larger tipography for bigger screens
+  // Larger typography for bigger screens
   @media screen and (min-width: 414px) {
     font-size: 19px;
     line-height: 28px;
@@ -44,21 +22,7 @@ html.blog_index body {
     padding: 80px 30px 140px;
   }
 
-  a {
-    color: inherit;
-    text-decoration: none;
-
-    &:hover {
-      border-color: currentColor;
-    }
-  }
-
-  // This is a matter of taste and can be safely removed
-  -webkit-font-smoothing: antialiased;
-  text-rendering: optimizeLegibility;
-
   h1, h2, h3, h4, h5, h6 {
-    font-family: $font-family-sans-serif;
     font-weight: $font-weight-bold;
     line-height: 1;
     margin-top: 0;
@@ -85,13 +49,6 @@ html.blog_index body {
 
   h4, h5, h6 {
     font-size: 1em;
-  }
-
-  a {
-    border-bottom: 2px solid rgba(0,0,0,.2);
-    color: inherit;
-    text-decoration: none;
-    word-wrap: break-word;
   }
 
   hr {
@@ -177,7 +134,14 @@ html.blog_index body {
 }
 
 .Blog-header {
+  @include user-select(none);
   text-align: center;
+  margin-bottom: 20px;
+}
+
+.Blog-post-header {
+  @include user-select(none);
+  margin-bottom: 40px;
 }
 
 .Blog-archive {
@@ -191,7 +155,6 @@ html.blog_index body {
 }
 
 .Blog-archive-date, .Blog-post-date {
-  font-family: $font-family-sans-serif;
   text-transform: uppercase;
   letter-spacing: 1px;
   opacity: 0.2;
@@ -205,5 +168,4 @@ html.blog_index body {
 .Blog-logo {
   width: 110px;
   height: 127px;
-  margin-bottom: 40px;
 }
