--- a/source/stylesheets/_homepage.css.scss
+++ b/source/stylesheets/_homepage.css.scss
@@ -1,18 +1,6 @@
-html.index,
-html.index body {
-  height: 100%;
-}
-
-html.index body {
-  -webkit-font-smoothing: antialiased;
-  background: $primary-color;
-  color: $primary-invert-color;
-  font-family: Source Sans Pro, sans-serif;
+.Homepage {
   font-size: 20px;
   text-align: center;
-}
-
-.Homepage {
   height: 100%;
   margin: 0 auto;
   padding: 0;
@@ -28,16 +16,6 @@ html.index body {
   p {
     line-height: 1.5em;
   }
-
-  a {
-    border-bottom: 2px solid rgba(255,255,255,.2);
-    color: inherit;
-    text-decoration: none;
-
-    &:hover {
-      border-color: inherit;
-    }
-  }
 }
 
 .Homepage, .Homepage-content {
@@ -49,6 +27,7 @@ html.index body {
 }
 
 .Homepage-logo {
+  @include user-select(none);
   margin-bottom: 20px;
   width: 80%;
   max-width: 350px;
